--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     tools:context="com.londonappbrewery.iampoor.MainActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/iamPoor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -22,13 +22,25 @@
         android:textSize="40sp" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/coal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView"
-        android:layout_marginTop="25dp"
+        android:layout_alignWithParentIfMissing="false"
+        android:layout_below="@+id/iamPoor"
         android:contentDescription="@drawable/coal"
         app:srcCompat="@drawable/coal" />
+
+    <TextView
+        android:id="@+id/LondonAPPl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignWithParentIfMissing="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="19dp"
+        android:text="@string/www_londonappbrewery_com"
+        android:textAlignment="center"
+        android:textSize="23sp" />
 </RelativeLayout>
