--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ecf0f1"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -11,24 +12,41 @@
     tools:context="com.londonappbrewery.iampoor.MainActivity">
 
     <TextView
-        android:id="@+id/iamPoor"
+        android:id="@+id/text_i_am"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="34dp"
-        android:text="@string/i_am_poor"
-        android:textColor="#FF000000"
-        android:textSize="40sp" />
+        android:layout_above="@+id/image_coal"
+        android:layout_marginBottom="15dp"
+        android:layout_marginEnd="11dp"
+        android:layout_marginRight="11dp"
+        android:layout_toLeftOf="@+id/textView"
+        android:layout_toStartOf="@+id/textView"
+        android:text="@string/i_am"
+        android:textColor="#d35400"
+        android:textSize="50sp" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/text_i_am"
+        android:layout_alignBottom="@+id/text_i_am"
+        android:layout_alignEnd="@+id/LondonAPPl"
+        android:layout_alignRight="@+id/LondonAPPl"
+        android:layout_marginEnd="43dp"
+        android:layout_marginRight="43dp"
+        android:text="@string/poor"
+        android:textSize="50sp"
+        android:textStyle="bold" />
 
     <ImageView
-        android:id="@+id/coal"
+        android:id="@+id/image_coal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/LondonAPPl"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignWithParentIfMissing="false"
-        android:layout_below="@+id/iamPoor"
         android:contentDescription="@drawable/coal"
         app:srcCompat="@drawable/coal" />
 
@@ -42,5 +60,6 @@
         android:layout_marginBottom="19dp"
         android:text="@string/www_londonappbrewery_com"
         android:textAlignment="center"
+        android:textColor="#f39c12"
         android:textSize="23sp" />
 </RelativeLayout>
