--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,12 +15,11 @@
         android:id="@+id/text_i_am"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/image_coal"
-        android:layout_marginBottom="15dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginRight="11dp"
-        android:layout_toLeftOf="@+id/textView"
-        android:layout_toStartOf="@+id/textView"
+        android:layout_alignLeft="@+id/LondonAPPl"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/LondonAPPl"
+        android:layout_marginLeft="38dp"
+        android:layout_marginStart="38dp"
         android:text="@string/i_am"
         android:textColor="#d35400"
         android:textSize="50sp" />
@@ -29,12 +28,11 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/text_i_am"
-        android:layout_alignBottom="@+id/text_i_am"
-        android:layout_alignEnd="@+id/LondonAPPl"
-        android:layout_alignRight="@+id/LondonAPPl"
-        android:layout_marginEnd="43dp"
-        android:layout_marginRight="43dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="11dp"
+        android:layout_marginStart="11dp"
+        android:layout_toEndOf="@+id/text_i_am"
+        android:layout_toRightOf="@+id/text_i_am"
         android:text="@string/poor"
         android:textSize="50sp"
         android:textStyle="bold" />
@@ -43,10 +41,10 @@
         android:id="@+id/image_coal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/LondonAPPl"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignWithParentIfMissing="false"
+        android:layout_below="@+id/textView"
         android:contentDescription="@drawable/coal"
         app:srcCompat="@drawable/coal" />
 
@@ -54,12 +52,19 @@
         android:id="@+id/LondonAPPl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignWithParentIfMissing="true"
+        android:layout_below="@+id/button"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="19dp"
         android:text="@string/www_londonappbrewery_com"
         android:textAlignment="center"
         android:textColor="#f39c12"
         android:textSize="23sp" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/image_coal"
+        android:layout_centerHorizontal="true"
+        android:text="@string/roll" />
 </RelativeLayout>
